--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ Changes:
     * new command: list_rules
     * allow true/false as arguments to commands accepting boolean values. This
       affects the commands: floating, fullscreen, pseudotile and rule.
+    * new command: new_attr
 
 Release 0.5.1 on 2013-01-05
 ---------------------------
