Add command: sprintf

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,7 @@ Changes:
     * allow true/false as arguments to commands accepting boolean values. This
       affects the commands: floating, fullscreen, pseudotile and rule.
     * new command: new_attr, remove_attr, get_attr, set_attr
+    * new command: substitute, sprintf
 
 Release 0.5.1 on 2013-01-05
 ---------------------------
