Add rule flag prepend
Allow prepending of new rules instead of appending them to the list of
rules.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ herbstluftwm NEWS -- History of user-visible changes
 Next Release
 ------------
 
+    * new rule flag: prepend
+
 Release 0.5.2 on 2013-06-23
 ---------------------------
 
