--- a/AUTHORS
+++ b/AUTHORS
@@ -6,10 +6,11 @@ Contributors, sorted by the number of commits in descending order:
 Thorsten Wißmann
 Florian Bruhin
 Hans-Peter Deifel
-Bastien Dejean
-Gabor Adam Toth
 Tyler Thomas Hart
+Bastien Dejean
 Christoph Egger
+Gabor Adam Toth
+Daniel Danner
 Johannes Schilling
 Steffen Liebergeld
 Georg Reinke
@@ -17,7 +18,7 @@ Christian Dietrich
 Cheer Xiao
 Philipp Erhardt
 Olivier Ramonat
-Daniel Danner
+Gabor X Toth
 Corey Richardson
 Clemens Lang
 
