Let string_to_client accept decimal window ids

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Next Release
 
     * new rule flag: prepend
     * close now accepts an arbitrary window id as a parameter
+    * Also allow decimal window ids for raise, jump, close (TODO: document
+      this generally)
 
 Release 0.5.2 on 2013-06-23
 ---------------------------
