doc: Describe window referencing

--- a/NEWS
+++ b/NEWS
@@ -7,8 +7,8 @@ Current git version
     * make window floating faster, by dropping old motion events
     * new rule flag: prepend
     * close now accepts an arbitrary window id as a parameter
-    * Also allow decimal window ids for raise, jump, close (TODO: document
-      this generally)
+    * Also allow decimal window ids for commands accepting a window id, like
+      raise, jump, close
 
 Release 0.5.2 on 2013-06-23
 ---------------------------
