Add new split modes top and left

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ Current git version
     * close now accepts an arbitrary window id as a parameter
     * Also allow decimal window ids for commands accepting a window id, like
       raise, jump, close
+    * new split modes, i.e. parameters to the split command: bottom, right
+      (indicating the relative location of the new empty frame)
 
 Release 0.5.2 on 2013-06-23
 ---------------------------
