--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ Current git version
     * new split modes, i.e. parameters to the split command: bottom, right
       (indicating the relative location of the new empty frame)
     * new split mode: fragment
+    * make fraction parameter for the split command optional
 
 Release 0.5.2 on 2013-06-23
 ---------------------------
