For frame transparency cut frames using XShape
To make frames transparent, cut out a rectangle from the center of them
using the shape extension of X. This also introduces the
frame_transparent_width setting. This avoids ugly artefacts when using
frame_bg_transparent together with a compositing manager.

--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,10 @@ Current git version
     * new split mode: explode
     * make fraction parameter for the split command optional
     * respect size hints in floating and tiling mode
+    * new setting: frame_transparent_width
+    * frame_bg_transparent: instead of copying the pixmap from the root window
+      achieve transparency by cutting out a rectangle from the center of frames
+      using the Shape Extension of X.
 
 Release 0.5.2 on 2013-06-23
 ---------------------------
