--- a/www/faq.txt
+++ b/www/faq.txt
@@ -221,5 +221,6 @@ Q: How can I start external panels correctly?::
 ----
 
 Q: I'm using a compositing manager like xcompmgr and get ugly artifacts when switching tags or splitting frames::
-    You probably have +frame_bg_transparent+ enabled. Disable this setting and
-    use +frame_active_opacity+ and/or +frame_normal_opacity+ instead.
+    You probably have an old version of herbstluftwm and +frame_bg_transparent+
+    enabled. Disable this setting and use +frame_active_opacity+ and/or
+    +frame_normal_opacity+ instead or upgrade to the current git version.
