Add color as a object attribute type

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ Release 0.5.3 on 2013-12-24
       via the client properties sizehints_tiling and sizehints_floating
     * new setting: pseudotile_center_threshold
     * new command: cycle_frame
+    * new object attribute type: color
 
 Release 0.5.2 on 2013-06-23
 ---------------------------
