--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ Current git version
     * new example script: scratchpad.sh
     * if swap_monitors_to_get_tag is set to 0, then focus the other monitor if
       the desired tag is shown on another monitor instead of doing nothing
+    * new split mode: auto
 
 Release 0.5.3 on 2013-12-24
 ---------------------------
