--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ Current git version
       they are replaced by the more general attributes frames.focus.windex
       frames.focus.wcount.
     * new example script: scratchpad.sh
+    * if swap_monitors_to_get_tag is set to 0, then focus the other monitor if
+      the desired tag is shown on another monitor instead of doing nothing
 
 Release 0.5.3 on 2013-12-24
 ---------------------------
