--- a/README
+++ b/README
@@ -28,7 +28,7 @@ A list of known bugs is listed in BUGS. If you found other bugs or want to
 request features then contact the mailing list. (The subscription process is
 explained in the HACKING file).
 
-Mailing list: herbstluftwm-devel@lists.sourceforge.net
+Mailing list: hlwm@lists.herbstluftwm.org
 
 For instant help join the IRC channel: #herbstluftwm on irc.freenode.net
 
