Add consequence to move a client to a monitor
The new 'monitor' consequence will move the client to the specified
monitor. It will interact with the 'tag' consequence if it is also
specified for the given client. This behaviour is documented in
doc/herbstluftwm.txt, so I will not go into it here.

--- a/NEWS
+++ b/NEWS
@@ -29,6 +29,7 @@ Current git version
     * add completion to the mousebind command
     * add mouse function call to call commands on mouse button press
     * add setting update_dragged_clients
+    * new rule consequence: monitor
 
 Release 0.5.3 on 2013-12-24
 ---------------------------
