Add command try

--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,7 @@ Current git version
     * add mouse function call to call commands on mouse button press
     * add setting update_dragged_clients
     * new rule consequence: monitor
+    * new command: try
 
 Release 0.5.3 on 2013-12-24
 ---------------------------
