Update NEWS for 0.6.1 release

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ Current git version
 -------------------
 
     * directional shift of floating windows
+    * fix crash of directional focus
+    * document theme.minimal
 
 Release 0.6.0 on 2014-03-19
 ---------------------------
