--- a/www/faq.txt
+++ b/www/faq.txt
@@ -121,9 +121,14 @@ hc rule class=Gimp windowrole=gimp-toolbox focus=off index=00
 hc rule class=Gimp windowrole=gimp-dock focus=off index=1
 ----
 
-Q: What about an layout for Instant Messaging applications (Gajim, Pidgin, …)?
-------------------------------------------------------------------------------
-A good layout for Instant Messaging applications where one frame on the left displays the roster, consuming ~15% of the monitor space, while the right side is used for the conversations can be configured easily with herbstluftwm. The following example configures such a layout on tag '7' and creates the rules to automatically move Gajim's windows to the right frame:
+Q: What about a layout for Instant Messaging applications (Gajim, Pidgin, …)?
+-----------------------------------------------------------------------------
+A good layout for Instant Messaging applications looks as follows: One frame on
+the left displays the buddy list/roster, consuming ~15% of the monitor space,
+while the right side is used for the conversations. This can be configured
+easily with herbstluftwm. The following example configures such a layout on tag
+'7' and creates the rules to automatically move Gajim's windows to the right
+frame:
 
 ----
 hc load 7 '(split horizontal:0.15:1 (clients horizontal:0) (clients grid:4))'
