Unhardcode /bin/bash
Eases packaging for systems that do not put bash in /bin, such as the BSDs
(who put bash in /usr/local/bin).

--- a/www/faq.txt
+++ b/www/faq.txt
@@ -154,7 +154,7 @@ Add a rule for the clients pid, before the client appears. This script
 creates two xterms with different behaviours:
 
 ----
-#!/bin/bash
+#!/usr/bin/env bash
 
 # Requirement: bash >= 4.0 (because of the usage of $BASHPID)
 
