Add documentation for new features
Mention freshly introduced features in the NEWS file and the man page.

--- a/NEWS
+++ b/NEWS
@@ -7,8 +7,9 @@ Current git version
     * Handle EWMH request _NET_WM_MOVERESIZE more conform
     * Make tag objects accessible by their index
     * Automatically unmanage desktop windows (e.g. xfdesktop), and force them
-      to stay below all other windows. (TODO: find a proper place in the man
-      page to mention that).
+      to stay below all other windows.
+    * new command: close_and_remove
+    * new herbstclient flags: --last-arg --print0
 
 Release 0.6.2 on 2014-03-27
 ---------------------------
